# windowsOS-coworker

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  PLANNING.md  README.md  VENV-HOWTO.md  build.bat  config.py  coworker-cli.spec  coworker-gui.spec  developing-status.md  draft-request.txt  gui-planning.md  gui.py  main.py  pyproject.toml  requirements.txt
.git-hooks/: block_env_files.py  detect_private_key.py  scan_secrets.py
agents/: __init__.py  app_skill_agent.py  cpu_skill_agent.py  diagnostics_skill_agent.py  disk_skill_agent.py  envconfig_skill_agent.py  eventlog_skill_agent.py  files_skill_agent.py  memory_skill_agent.py  network_skill_agent.py  orchestrator.py  patch_skill_agent.py  process_skill_agent.py  registry_skill_agent.py  security_skill_agent.py  service_skill_agent.py  taskscheduler_skill_agent.py  user_skill_agent.py
core/: approval.py  audit_log.py  exceptions.py  memory_store.py  powershell.py  risk.py
init/: copilot-cowork-overview.md
skills/app/: tools.py
skills/cpu/: tools.py
skills/diagnostics/: tools.py
skills/disk/: tools.py
skills/envconfig/: tools.py
skills/eventlog/: tools.py
skills/files/: tools.py
skills/memory/: tools.py
skills/network/: tools.py
skills/patch/: tools.py
skills/process/: tools.py
skills/registry/: tools.py
skills/security/: tools.py
skills/service/: tools.py
skills/taskscheduler/: tools.py
skills/user/: tools.py
tests/agents/: test_orchestrator_memory.py
tests/core/: test_audit_log.py  (+3 more)
ui/: __init__.py  app.py  bridge.py  main_window.py  worker.py
(+14 files in other folders)
