[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "windowsOS-coworker"
version = "0.1.0"
description = "AI-powered Windows OS operations coworker for DevOps/ITOps engineers"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.19",
    "openai>=1.30.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform=='win32'",
    "wmi>=1.5.1; sys_platform=='win32'",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "PyQt6>=6.7.0",
    "qasync>=0.27.0",
    "pygments>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-psutil",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "skills", "agents"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real OS APIs or PowerShell (deselect with -m 'not integration')",
]
